<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <TextView
        android:id="@+id/profile_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/common_profile_title"
        android:textColor="@color/science_blue"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/profile_name_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/profile_activity_name_text"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_title_textview"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/profile_surname_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/profile_activity_surname_text"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_name_edittext"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/profile_age_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/profile_activity_age_text"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_surname_edittext"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/profile_weight_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:hint="@string/profile_activity_weight_text"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@id/profile_age_edittext"
        app:layout_constraintLeft_toRightOf="@id/profile_age_edittext"
        app:layout_constraintTop_toTopOf="@id/profile_age_edittext"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/profile_height_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:hint="@string/profile_activity_height_text"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@id/profile_weight_edittext"
        app:layout_constraintLeft_toRightOf="@id/profile_weight_edittext"
        app:layout_constraintTop_toTopOf="@id/profile_weight_edittext"
        tools:ignore="LabelFor" />

    <RadioGroup
        android:id="@+id/profile_sex_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/profile_height_edittext">

        <android.support.v7.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_actitivty_female" />

        <android.support.v7.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/profile_actitivty_male" />
    </RadioGroup>

    <TextView
        android:id="@+id/profile_activity_select_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Select you activity"
        app:layout_constraintTop_toBottomOf="@+id/profile_sex_radio_group" />





    <TextView
        android:id="@+id/profile_activity_select_help_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_activity_select_help"
        android:textColor="@color/dodger_blue"
        app:layout_constraintBottom_toBottomOf="@+id/profile_activity_select_textview"
        app:layout_constraintRight_toRightOf="@id/profile_activity_radio_group"
        app:layout_constraintTop_toTopOf="@+id/profile_activity_select_textview" />

    <RadioGroup
        android:id="@+id/profile_activity_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/profile_activity_select_textview">

        <android.support.v7.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Faible" />

        <android.support.v7.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="Modéré" />

        <android.support.v7.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="Importante" />

        <android.support.v7.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="Intence" />

    </RadioGroup>

    <TextView
        android:id="@+id/profile_activity_need_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/profile_activity_energy_need"
        app:layout_constraintTop_toBottomOf="@id/profile_activity_radio_group" />

    <Button
        android:id="@+id/profile_activity_need_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="Go"
        app:layout_constraintBottom_toBottomOf="@id/profile_activity_need_textview"
        app:layout_constraintLeft_toRightOf="@id/profile_activity_need_textview"
        app:layout_constraintTop_toTopOf="@id/profile_activity_need_textview" />




</android.support.constraint.ConstraintLayout>